# single-node

./: .gitignore  README.md  docker-compose.yml
DataEng/: Cargo.toml
DataEng/src/: lib.rs  main.rs
DataEng/src/config/: app_config.rs  cloud.rs  mod.rs
DataEng/src/ingestion/: mod.rs  s3_scanner.rs  validator.rs
DataEng/src/storage/: delta_writer.rs  mod.rs  parquet_writer.rs
DataEng/src/transformations/: aggregation.rs  filters.rs  mod.rs
DataEng/tests/: integration_test.rs
DataEng/tests/common/: helpers.rs
DataEng/tests/ingestion/: s3_tests.rs
DataEng/tests/storage/: delta_tests.rs  mod.rs
DataEng/tests/transformations/: agg_tests.rs
DataGen/: README.md  requirements.txt
DataGen/src/: generator.py  uploader.py
Orchestrator/: README.md  requirements.txt
Orchestrator/src/: __init__.py
Orchestrator/src/assets/: __init__.py  transactions.py
Orchestrator/src/sensors/: __init__.py  s3_sensors.py
