[package]
name = "data_eng"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data Processing
polars = { version = "0.41", features = ["lazy", "parquet", "aws", "temporal", "dtype-datetime", "strings"] }

# ACID Storage
deltalake = { version = "0.19", features = ["s3"] }

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization & Utilities
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
url = "2.5"
futures = "0.3"
uuid = { version = "1.21.0", features = ["v4"] }
